# momo-parse-api

./: .env.example  .gitignore  .pre-commit-config.yaml  BLOG_POST.md  DEMO_WALKTHROUGH.md  Dockerfile  LICENSE  OUTREACH_EMAIL.md  PARSER_README.md  README.md  generate_corpus.py  nixpacks.toml  pyproject.toml
api/: auth.py  logging_config.py  main.py  models.py  rate_limit.py
categorizer/: __init__.py  counterparty.py  features.py  label_corpus.py  labeled_data.csv  model.pkl  model.py  pipeline.py  rules.py  taxonomy.py  train.py
configs/: mtn_templates.json  telecel_templates.json
corpus/: synthetic_sms_corpus.csv
db/: __init__.py  engine.py  models.py
docs/: build_log.md  data_minimization.md  demo_report.md  drift_benchmark.md  full_picture_beamer.tex  hand_labeling_guide.md  improvements.md  ml_benchmark.md  ml_evaluation.md  raci_chart.md  research_narrative.md  research_paper_structure.md  sensitivity_analysis.md
enricher/: __init__.py  analytics.py  jobs.py
examples/: basic_parse.py
momoparse/: __init__.py  async_client.py  client.py
parser/: __init__.py  config_loader.py  detector.py  extractor.py  fuzzy.py  matcher.py  models.py  normalizers.py  pipeline.py  telemetry.py
scripts/: demo_report.py  evaluate.py  import_sms_xml.py  sample_for_labeling.py  score_human_labels.py  sensitivity_analysis.py
sdk/: __init__.py  async_client.py  client.py  exceptions.py  models.py
tests/: conftest.py  helpers.py  test_api.py  test_categorizer.py  test_corpus_real.py  test_corpus_synthetic.py  test_detector.py  test_drift.py  test_enrich.py  (+7 more)
(+8 files in other folders)
