[tool.poetry]
name = "momoparse"
version = "0.1.0"
description = "Transaction intelligence API for Mobile Money SMS — the Plaid Enrich for MoMo markets"
authors = ["Alex Marfo Appiah"]
readme = "README.md"
packages = [{ include = "parser" }, { include = "api" }, { include = "momoparse" }]
keywords = ["mobile money", "momo", "sms", "fintech", "ghana", "africa", "parser"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"
httpx = "^0.27.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.0.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
hypothesis = "^6.115.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
